添加native打包配置